testdata/destination-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: destination
  namespace: destination
spec:
  selector:
    app: destination
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
