testdata/source-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: source
  labels:
    purpose: source
